# spice

./: .dvcignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHIVE.md  CLEAN_BREAK_TRACKER.md  CONFIGURATION.md  CONTEXT.md  FABLE.md  PROGRESS.md  README.md  REMOTE.yaml  codebase-guide.html  dvc.yaml  params.yaml  pyproject.toml  pyrightconfig.json
app/: App.tsx  app.json  package-lock.json  package.json
app/src/: analytics.ts  history.ts  inference.ts  theme.ts
apps/mobile/: app.json  package-lock.json  package.json
benchmarks/: README.md  results.csv  results.sqlite
benchmarks/scripts/: merge_ethereum_pectra_jun20_corpus.py  render_delay_degradation_figures.py  render_edge_case_figures.py  render_ethereum_pectra_fee_scatter.py  render_ethereum_pectra_jun20_lstm_edge_figures.py  render_lstm_block_count_quartile_results.py  render_lstm_edge_case_class_only_figures.py  render_lstm_edge_case_cross_chain_figures.py  render_lstm_wall_clock_quartile_results.py  scan_edge_case_windows.py  scan_ethereum_pectra_edge_case_windows.py  scan_wall_clock_quartile_windows.py  summarize_ethereum_pectra_edge_case_ci.py  summarize_matched_lstm_training_fee_stats.py  write_evaluation_suite_from_window_csv.py
configs/: baseline.yaml
configs/pilots/: ethereum-36s.yaml
contracts/: SpiceDemo.sol
docs/: reference.md  theory.md  tutorial.md
docs/adr/: 0001-root-id-consumer-workflows.md  0002-config-resolution-hydration-loading.md  0003-representation-seam-retained.md  0004-compiler-materialization-existing-root-vocabulary.md  0005-custom-execution-session-retained.md  0006-direct-durable-object-authority.md  0007-native-external-execution-boundary.md
docs/codebase-guide/: spice-acquisition-rpc.html  spice-acquisition.html  spice-benchmarks.html  spice-cli-commands.html  spice-cli.html  spice-conf.html  spice-config.html  spice-core.html  spice-corpus.html  spice-evaluation.html  spice-execution.html  spice-features.html  spice-modeling-dataset-builders.html  spice-modeling-families.html  spice-modeling.html  spice-objectives.html  spice-prediction-families-min-block-fee-multitask.html  spice-prediction-families.html  spice-prediction.html  spice-storage-catalog.html  spice-storage.html  spice-temporal-compilers.html  spice-temporal-execution-policy.html  spice-temporal-input-normalization.html  spice-temporal.html  spice-workflows.html  spice.html
docs/research/: auxiliary-fee-regression-head-conceptual-audit.md  current-block-action-cross-layer-parity-prototype.md  current_block_action_cross_layer_fixture.py  eip1559-equivalent-chain-candidates.md  ethereum-current-row-causality-and-options.md  evm-fees.html  fixed-block-comparability-and-exhaustive-replay.md  gas-base-fees-and-priority-fees.html  issue-19-remote-control-frameworks.md  issue_47_complete_outcome_split_fixture.py  modern-regime-coverage-and-evidence-periods.md  priority-fees.md  remote-execution-supported-interfaces-audit.md  research-evaluation-publication-assets-inventory.md  rpc-retry-finality-alternatives.md  spice-pre-break-evidence-baseline.md  spice-pre-break-evidence-manifest.tsv  target-filesystem-root-journal-constraints.md  teaching.css  total-loss-economic-objective-ab-evidence.md
experiments/: __init__.py  c_study.py  context_history.py  held_out.py  hpo.py  k5_fee_conditions.py  k_study.py
src/fable/: acquisition.py  addresses.py  config.py  execution.py  experiments.py  min_block_fee.py  modeling.py  requests.py  serving.py  study.py  tuning.py
src/spice/: ARCHITECTURE.md  __main__.py  api.py  benchmark_runs.py  cli.py  identifiers.py  metrics.py  (+4 more)
tests/: artifact_helpers.py  catalog_helpers.py  conftest.py  dataset_helpers.py  root_handle_helpers.py  support.py  test_acquire.py  test_acquisition.py  test_artifacts.py  test_cli.py  test_cli_help.py  test_config.py  test_config_cli.py  test_console.py  test_cryo.py  test_data.py  test_datasets.py  test_enrich.py  test_execution.py  test_experiments.py  test_features.py  test_io.py  test_min_block_fee.py  test_modeling.py  test_modeling_execution.py  test_pipeline.py  test_power.py  test_providers.py  test_raw_validation.py  test_requests_and_addresses.py  test_rpc_providers.py  test_runtime.py  test_serving.py  test_simulation.py  test_study.py  test_training.py  test_training_consistency.py  test_training_progress.py  test_tuning.py  test_workflow_shared.py  (+1 more)
(+1318 files in other folders)
