[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spice"
version = "0.1.0"
description = "Practical reproduction of the SPICE temporal module baseline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Edoardo" }
]
dependencies = [
  "numpy>=1.26",
  "polars>=1.5",
  "torch>=2.5",
  "pydantic>=2.12",
  "rich>=14.3",
  "scikit-learn>=1.8",
  "hydra-core>=1.3",
  "sf-hamilton>=1.89",
  "typer>=0.16",
  "lightning>=2.6",
  "optuna>=4.8",
  "web3>=7.15",
  "pandera>=0.30",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1",
  "pytest>=8.3",
  "ruff>=0.6",
]

[project.scripts]
spice = "spice.cli:main"

[tool.hatch.build]
include = ["src/spice/conf/**/*.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/spice"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:websockets\\.legacy is deprecated.*:DeprecationWarning:websockets\\.legacy",
  "ignore:GPU available but not used.*:UserWarning:lightning\\.pytorch\\.trainer\\.setup",
  "ignore:.*LeafSpec.*",
  "ignore:The 'train_dataloader' does not have many workers.*:UserWarning:lightning\\.pytorch\\.trainer\\.connectors\\.data_connector",
  "ignore:The 'val_dataloader' does not have many workers.*:UserWarning:lightning\\.pytorch\\.trainer\\.connectors\\.data_connector",
]
