[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spice"
version = "0.1.0"
description = "Practical reproduction of the SPICE temporal module baseline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Edoardo" }
]
dependencies = [
  "numpy>=1.26",
  "polars>=1.5",
  "torch>=2.5",
  "pydantic>=2.12",
  "PyYAML>=6.0",
  "typer>=0.16",
  "optuna>=4.8",
  "SQLAlchemy>=2.0",
  "web3>=7.15",
  "scikit-learn>=1.8,<1.9",
  "psutil>=7,<8",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[project.optional-dependencies]
dev = [
  "pyright>=1.1",
  "pytest>=8.3",
  "ruff>=0.6",
  "vulture>=2.16",
]

[project.scripts]
spice = "spice.cli.app:main"

[tool.hatch.build]
include = ["src/spice/conf/**/*.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/spice"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:websockets\\.legacy is deprecated.*:DeprecationWarning:websockets\\.legacy",
]

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 90
