[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fable"
version = "0.1.0"
description = "Fee Analysis through Blockchain Learning and Estimation."
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "Edoardo" }
]
dependencies = [
  "numpy>=1.26",
  "polars>=1.5",
  "torch==2.7.1",
  "lightning==2.6.5",
  "torchmetrics==1.9.0",
  "pydantic>=2.12",
  "PyYAML>=6.0",
  "typer>=0.16",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[project.optional-dependencies]
serve = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "web3>=7.15",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "pyright>=1.1",
  "vulture>=2.16",
]

[project.scripts]
fable = "fable.cli.app:main"

[tool.hatch.build.targets.wheel]
include = ["src/fable/**/*.py"]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:websockets\\.legacy is deprecated.*:DeprecationWarning:websockets\\.legacy",
]

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 90
